--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="MangaShelf.html">
-          <img src="../static/img/sitelogo.png" alt="Manga">
+          <img src="../static/img/logoShelf1.png" alt="Manga">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
