--- a/static/css/MangaShelf.css
+++ b/static/css/MangaShelf.css
@@ -1,16 +1,18 @@
 nav .container-fluid {
   max-width: 990px;
 }
-
 nav img {
   max-height: 35px;
+}
+
+.row {
+  margin: 0;
 }
 
 #carousel {
   height: 500px;
   overflow: hidden;
 }
-
 #carousel .carousel-caption {
   color: #e5bb43;
   margin: auto;
@@ -24,11 +26,9 @@ nav img {
 .allCards {
   margin-top: 3vh;
 }
-
 .allCards .col {
   width: 100px;
 }
-
 .allCards .col .card {
   width: 100%;
-}
+}/*# sourceMappingURL=MangaShelf.css.map */
