--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -55,16 +55,14 @@
 
 
     <!-- Cards -->
-    <div class="allCards row d-flex justify-content-around">
-      {% for i in range(0, 4) %}
-      <div class="col">
+<div class="allCards row d-flex justify-content-around">
+      {% for element in entry['Catalogue'] %}
+      <div class="col-3">
         <div class="card">
-          <img src="{{ test }}" class="card-img-top" alt="...">
+          <img src="{{ element['image'] }}" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text
-              below as a natural lead-in to additional content. This content is
-              a little bit longer.</p>
+            <h5 class="card-title">{{ element['title'] }}</h5>
+            <p class="card-text">{{ element['description'] | truncate(200)}}</p>
           </div>
         </div>
       </div>
