--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -69,6 +69,39 @@
       {% endfor %}
     </div>
 
+<form method="post" enctype="multipart/form-data" action="/registration">
+  <label class="form-label ">registration</label>
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control" id="InputName" placeholder="Name" name="name">
+    <label for="InputName" class="form-label ">Name</label>
+  </div>
+  <div class="form-floating mb-3">
+    <input type="password" class="form-control" id="InputPassword" placeholder="Password" name="password">
+    <label for="InputPassword" class="form-label">Password</label>
+  </div>
+  <button type="submit" name="button" class="btn btn-primary">
+    Submit
+  </button>
+</form>
+
+<form method="post" enctype="multipart/form-data" action="/addElement">
+  <label class="form-label ">addElement</label>
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control" id="title" placeholder="Title" name="title">
+    <label for="title" class="form-label ">Title</label>
+  </div>
+  <div class="form-group">
+    <label for="description">Example textarea</label>
+    <textarea class="form-control" id="description" rows="4" name="description"></textarea>
+  </div>
+  <div class="form-floating mb-3">
+    <input class="form-control form-control-lg" name="image" id="image"  accept=".jpg, .jpeg, .png" type="file">
+  </div>
+  <button type="submit" name="button" class="btn btn-primary">
+    Submit
+  </button>
+</form>
+
 
  <!-- Це я хочу отримати і вивести зображення -->
  <form method="post" enctype="multipart/form-data">
