--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
         0.2);">
         © 2020 Copyright:
-        <a class="text-white" href="http://127.0.0.1:5500/MangaShelf-master/templates/MangaShelf.html">MangaShelf.com</a>
+        <a class="text-white" href="http://127.0.0.1:5500/MangaShelf-master/templates/MangaShelf.html">MewManga.com</a>
       </div>
       <!-- Copyright -->
     </footer>
