off canvas with adding deleting and editing elments, page about
deleting is not correct

--- a/static/css/MangaShelf.scss
+++ b/static/css/MangaShelf.scss
@@ -25,11 +25,12 @@ nav {
 
 .allCards{
   //  margin-right: 0px;
-    margin-top: 3vh;
+    //margin-top: 3vh;
     .col{
         width: 100px;
         .card{
             width: 100%;
         }
     }
+
 }
