--- a/templates/About.html
+++ b/templates/About.html
@@ -1,9 +1,40 @@
 {%extends 'base.html'%}
-    {%block head%}
+{%block head%}
 <title>Mew Manga</title>
-    {%endblock%}
-
-
-    {%block body%}
+{%endblock%}
+{%block body%}
+<p><b>Manga</b> (Japanese: 漫画 [maŋga]) are comics or graphic novels
+    originating from Japan. Most manga conform to a style developed in Japan in
+    the late 19th century, and the form has a long prehistory in earlier
+    Japanese art. The term manga is used in Japan to refer to both comics and
+    cartooning. Outside of Japan, the word is typically used to refer to comics
+    originally published in the country.
+</p>
+<p>In Japan, people of all ages and walks of life read manga. The medium
+    includes works in a broad range of genres: action, adventure, business and
+    commerce, comedy, detective, drama, historical, horror, mystery, romance,
+    science fiction and fantasy, erotica (hentai and ecchi), sports and games,
+    and suspense, among others. Many manga are translated into other languages.
+</p>
+<p>Since the 1950s, manga has become an increasingly major part of the Japanese
+    publishing industry. By 1995, the manga market in Japan was valued at
+    ¥586.4 billion ($6–7 billion),with annual sales of 1.9 billion manga
+    books and manga magazines in Japan (equivalent to 15 issues per person).
+    In 2020 Japan's manga market value hit a new record of ¥612.6 billion due to
+    the fast growth of digital manga sales as well as increase of print
+    sales. Manga have also gained a significant worldwide
+    audience. Beginning with the late 2010s manga started massively
+    outselling American comics. In 2020 the North American manga market was
+    valued at almost $250 million. According to NPD BookScan manga made up
+    76% of overall comics and graphic novel sales in the US in 2021. The
+    fast growth of the North American manga market has been attributed to
+    manga's wide availability on digital reading apps, book retailer chains such
+    as Barnes & Noble and online retailers such as Amazon as well as the
+    increased streaming of anime. According to Jean-Marie Bouissou,
+    manga represented 38% of the French comics market in 2005. This is
+    equivalent to approximately 3 times that of the United States and was valued
+    at about €460 million ($640 million). In Europe and the Middle East, the
+    market was valued at $250 million in 2012.
+</p>
 
 {%endblock%}
