--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -1,92 +1,201 @@
 {%extends 'base.html'%}
-    {%block head%}
+{%block head%}
 <title>Mew Manga</title>
-    {%endblock%}
-    {%block body%}
-    <!-- Carousel -->
-    <div id="carousel" class="carousel slide"
-      data-bs-ride="false">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carousel"
-          data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carousel"
-          data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carousel"
-          data-bs-slide-to="2" aria-label="Slide 3"></button>
+{%endblock%}
+{%block body%}
+<!-- Carousel -->
+<div id="carousel" class="carousel slide"
+  data-bs-ride="false">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carousel"
+      data-bs-slide-to="0" class="active" aria-current="true"
+      aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carousel"
+      data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carousel"
+      data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        src="https://staticg.sportskeeda.com/editor/2022/03/59485-16462404746687-1920.jpg"
+        class="d-block w-100 h-50">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Plunge into these worlds with your head</p>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="https://staticg.sportskeeda.com/editor/2022/03/59485-16462404746687-1920.jpg"
-            class="d-block w-100 h-50">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Plunge into these worlds with your head</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://i.pinimg.com/736x/21/00/0e/21000e7f3ee23ccea1b6a0808c49ac5b.jpg"
-            class="d-block w-100 h-50">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Read manga on MangaShelf</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://jtalkonline.com/wp-content/uploads/2018/04/reading-manga-one-punch-man.png"
-            class="d-block w-100 h-50">
-          <div class="carousel-caption d-none d-md-block">
-            <p>Relax from the outside world.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button"
-        data-bs-target="#carousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button"
-        data-bs-target="#carousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
-
-
-    <!-- Cards -->
-<div class="allCards row d-flex justify-content-around">
-      {% for element in entry['Catalogue'] %}
-      <div class="col-3">
-        <div class="card">
-          <img src="{{ element['image'] }}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{ element['title'] }}</h5>
-            <p class="card-text">{{ element['description'] | truncate(200)}}</p>
-          </div>
-        </div>
+    <div class="carousel-item">
+      <img
+        src="https://i.pinimg.com/736x/21/00/0e/21000e7f3ee23ccea1b6a0808c49ac5b.jpg"
+        class="d-block w-100 h-50">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Read manga on MangaShelf</p>
       </div>
-      {% endfor %}
     </div>
-
-
-<form method="post" enctype="multipart/form-data" action="/addElement">
-  <label class="form-label ">addElement</label>
-  <div class="form-floating mb-3">
-    <input type="text" class="form-control" id="title" placeholder="Title" name="title">
-    <label for="title" class="form-label ">Title</label>
+    <div class="carousel-item">
+      <img
+        src="https://jtalkonline.com/wp-content/uploads/2018/04/reading-manga-one-punch-man.png"
+        class="d-block w-100 h-50">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Relax from the outside world.</p>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="description">Example textarea</label>
-    <textarea class="form-control" id="description" rows="4" name="description"></textarea>
-  </div>
-  <div class="form-floating mb-3">
-    <input class="form-control form-control-lg" name="image" id="image"  accept=".jpg, .jpeg, .png" type="file">
-  </div>
-  <button type="submit" name="button" class="btn btn-primary">
-    Submit
+  <button class="carousel-control-prev" type="button"
+    data-bs-target="#carousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
   </button>
-</form>
+  <button class="carousel-control-next" type="button"
+    data-bs-target="#carousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+<!-- Cards -->
+<div class="allCards row d-flex justify-content-around mt-0">
+  <button class="btn btn-primary mb-3" id="offcanvasBtn" type="button"
+    data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+    aria-controls="offcanvasRight">Add new / Edit / Delete</button>
+  {% for element in entry['Catalogue'] %}
+  <div class="col-3">
+    <div class="card">
+      <img src="{{ element['image'] }}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{ element['title'] }}</h5>
+        <p class="card-text">{{ element['description'] | truncate(200)}}</p>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+
+
+</div>
+
+
+<div class="offcanvas offcanvas-end" tabindex="-1" data-bs-scroll="true"
+  id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasRightLabel">Do whatewer you want</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+      aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button"
+            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+            aria-expanded="false" aria-controls="flush-collapseOne">
+            Adding new manga
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse"
+          aria-labelledby="flush-headingOne"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <form method="post" enctype="multipart/form-data"
+              action="/addElement">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="title"
+                  placeholder="Title"
+                  name="title">
+                <label for="title" class="form-label ">Title</label>
+              </div>
+              <div class="form-group">
+                <label for="description">Describe the plot</label>
+                <textarea class="form-control" id="description" rows="4"
+                  name="description"></textarea>
+              </div>
+
+              <input class="form-control form-control-lg mt-2" name="image"
+                id="image"
+                accept=".jpg, .jpeg, .png" type="file">
+              <div class="mt-2 d-flex justify-content-center">
+                <button type="submit" name="button" class="btn btn-success">
+                  Add manga
+                </button>
+              </div>
+            </form>
+
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button"
+            data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+            aria-expanded="false" aria-controls="flush-collapseTwo">
+            Delete manga from site
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="flush-headingTwo"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <form method="post" enctype="multipart/form-data"
+              action="/deleteElement">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="titleDel"
+                  placeholder="Title" name="titleDel">
+                <label for="titleDel" class="form-label ">Title</label>
+
+                <div class="mt-2 d-flex justify-content-center">
+                <button type="submit" name="button" class="btn btn-success">
+                  Delete this one
+                </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button"
+            data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+            aria-expanded="false" aria-controls="flush-collapseThree">
+            Edit manga
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse"
+          aria-labelledby="flush-headingThree"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <form method="post" enctype="multipart/form-data" action="/updateElement">
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="FindByTitle" placeholder="FindByTitle" name="findByTitle">
+              <label for="FindByTitle" class="form-label ">Find by Title</label>
+            </div>
+              <hr>
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="newTitle" placeholder="newTitle" name="newTitle">
+              <label for="newTitle" class="form-label ">New Title</label>
+            </div>
+            <div class="form-group">
+              <label for="description">New Description</label>
+              <textarea class="form-control" id="newDescription" rows="4" name="newDescription"></textarea>
+            </div>
+              <input class="form-control form-control-lg mt-2" name="newImage" id="newImage"  accept=".jpg, .jpeg, .png" type="file">
+
+              <div class="mt-2 d-flex justify-content-center">
+            <button type="submit" name="button" class="btn btn-success">
+              Confirm editing
+            </button>
+              </div>
+          </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
 
