--- a/templates/base.html
+++ b/templates/base.html
@@ -49,10 +49,10 @@
               <a class="nav-link active" href="/about">About</a>
             </li>
           </ul>
-
-          <button class="btn btn-outline-success m-md-auto mt-3" data-bs-toggle="modal" data-bs-target="#modalSignIn" data-bs-whatever="">{{ entry['User'] }}</button>
-<!--            <button class="btn btn-outline-success m-md-auto mt-3 show-modal"-->
-<!--            data-bs-toggle="modal" data-bs-target="#modalSignUpLabel" data-bs-whatever="@mdo">Sign Up</button>-->
+          <div class="mt-3">
+            <button class="btn btn-outline-success m-md-auto" data-bs-toggle="modal" data-bs-target="#modalSignIn" data-bs-whatever="">{{ entry['User'] }}</button>
+            <button class="btn btn-outline-danger m-md-auto" >Log out</button>
+          </div>
         </div>
       </div>
     </nav>
