--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -56,9 +56,11 @@
 
 <!-- Cards -->
 <div class="allCards row d-flex justify-content-around mt-0">
+  {%if entry['UserLogin'] %}
   <button class="btn btn-primary mb-3" id="offcanvasBtn" type="button"
     data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
     aria-controls="offcanvasRight">Add new / Edit / Delete</button>
+  {%endif%}
   {% for element in entry['Catalogue'] %}
   <div class="col-3">
     <div class="card">
