--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -75,7 +75,15 @@
 
 
 </div>
-
+<nav aria-label="Page navigation">
+<ul class="pagination">
+<li class="page-item"><a href="/page:Previous" class="page-link">Previous</a></li>
+{% for i in range(1, entry['CataloguePages']) %}
+<li class="page-item"><a href="/page:{{ i }}" class="page-link">{{ i }}</a></li>
+{% endfor %}
+<li class="page-item"><a href="/page:Next" class="page-link">Next</a></li>
+</ul>
+</nav>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-scroll="true"
   id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
