finished About, styled body

--- a/templates/About.html
+++ b/templates/About.html
@@ -1,23 +1,35 @@
 {%extends 'base.html'%}
 {%block head%}
 <title>Mew Manga</title>
+<style>
+    .container img{
+        width: 45vh;
+        margin: 20px;
+    }
+    .about{
+        background-color: #f1dae5;
+        border-radius: 20px;
+    }
+</style>
 {%endblock%}
 {%block body%}
-<div class="container ">
-    <div class="row">
-        <div class="col">
-        <p>
-            <b>Manga</b> (Japanese: 漫画 [maŋga]) are comics or graphic novels
-            originating from Japan. Most manga conform to a style developed in
-            Japan in
-            the late 19th century, and the form has a long prehistory in earlier
-            Japanese art. The term manga is used in Japan to refer to both
-            comics and
-            cartooning. Outside of Japan, the word is typically used to refer to
-            comics
-            originally published in the country.
-        </p>
-        <p>In Japan, people of all ages and walks of life read manga. The medium
+<div class="container py-5 about mt-4">
+    <img
+        src="https://upload.wikimedia.org/wikipedia/commons/5/58/Wikipe-tan_manga_page1.jpg" alt=""
+        style="float: right">
+
+    <p>
+        <b>Manga</b> (Japanese: 漫画 [maŋga]) are comics or graphic novels
+        originating from Japan. Most manga conform to a style developed in
+        Japan in
+        the late 19th century, and the form has a long prehistory in earlier
+        Japanese art. The term manga is used in Japan to refer to both
+        comics and
+        cartooning. Outside of Japan, the word is typically used to refer to
+        comics
+        originally published in the country.
+    </p>
+    <p>In Japan, people of all ages and walks of life read manga. The medium
         includes works in a broad range of genres: action, adventure, business
         and
         commerce, comedy, detective, drama, historical, horror, mystery,
@@ -27,11 +39,8 @@
         and suspense, among others. Many manga are translated into other
         languages.
     </p>
-            </div>
-        <img class="col" src="https://upload.wikimedia.org/wikipedia/commons/5/58/Wikipe-tan_manga_page1.jpg">
-    </div>
-
-
+    <img src="https://i.ytimg.com/vi/8WHcSSY6J8k/maxresdefault.jpg" alt=""
+        style="float: left">
     <p>Since the 1950s, manga has become an increasingly major part of the
         Japanese
         publishing industry. By 1995, the manga market in Japan was valued at
