--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -1,6 +1,15 @@
 {%extends 'base.html'%}
 {%block head%}
 <title>Mew Manga</title>
+<style>
+  .allCards{
+    background-color: #f1dae5;
+    border-radius: 20px;
+  }
+  #offcanvasBtn{
+  background-color: #e3c865;
+}
+</style>
 {%endblock%}
 {%block body%}
 <!-- Carousel -->
@@ -55,12 +64,13 @@
 
 
 <!-- Cards -->
-<div class="allCards row d-flex justify-content-around mt-0">
-  {%if entry['UserLogin'] %}
-  <button class="btn btn-primary mb-3" id="offcanvasBtn" type="button"
-    data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-    aria-controls="offcanvasRight">Add new / Edit / Delete</button>
-  {%endif%}
+{%if entry['UserLogin'] %}
+<button class="btn mb-3 w-100" id="offcanvasBtn" type="button"
+  data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+  aria-controls="offcanvasRight">Add new / Edit / Delete</button>
+{%endif%}
+<div class="allCards row d-flex justify-content-around m-3 p-4">
+
   {% for element in entry['Catalogue'] %}
   <div class="col-3">
     <div class="card">
@@ -75,14 +85,14 @@
 
 
 </div>
-<nav aria-label="Page navigation">
-<ul class="pagination">
-<li class="page-item"><a href="/page:Previous" class="page-link">Previous</a></li>
-{% for i in range(1, entry['CataloguePages']) %}
-<li class="page-item"><a href="/page:{{ i }}" class="page-link">{{ i }}</a></li>
-{% endfor %}
-<li class="page-item"><a href="/page:Next" class="page-link">Next</a></li>
-</ul>
+<nav aria-label="Page navigation" class="d-flex justify-content-center mt-4 ">
+  <ul class="pagination ">
+    <li class="page-item"><a href="/page:Previous" class="page-link">Previous</a></li>
+    {% for i in range(1, entry['CataloguePages']) %}
+    <li class="page-item"><a href="/page:{{ i }}" class="page-link">{{ i }}</a></li>
+    {% endfor %}
+    <li class="page-item"><a href="/page:Next" class="page-link">Next</a></li>
+  </ul>
 </nav>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-scroll="true"
@@ -153,9 +163,9 @@
                 <label for="titleDel" class="form-label ">Title</label>
 
                 <div class="mt-2 d-flex justify-content-center">
-                <button type="submit" name="button" class="btn btn-success">
-                  Delete this one
-                </button>
+                  <button type="submit" name="button" class="btn btn-success">
+                    Delete this one
+                  </button>
                 </div>
               </div>
             </form>
@@ -174,28 +184,33 @@
           aria-labelledby="flush-headingThree"
           data-bs-parent="#accordionFlushExample">
           <div class="accordion-body">
-            <form method="post" enctype="multipart/form-data" action="/updateElement">
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="FindByTitle" placeholder="FindByTitle" name="findByTitle">
-              <label for="FindByTitle" class="form-label ">Find by Title</label>
-            </div>
+            <form method="post" enctype="multipart/form-data"
+              action="/updateElement">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="FindByTitle"
+                  placeholder="FindByTitle" name="findByTitle">
+                <label for="FindByTitle" class="form-label ">Find by Title</label>
+              </div>
               <hr>
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="newTitle" placeholder="newTitle" name="newTitle">
-              <label for="newTitle" class="form-label ">New Title</label>
-            </div>
-            <div class="form-group">
-              <label for="description">New Description</label>
-              <textarea class="form-control" id="newDescription" rows="4" name="newDescription"></textarea>
-            </div>
-              <input class="form-control form-control-lg mt-2" name="newImage" id="newImage"  accept=".jpg, .jpeg, .png" type="file">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="newTitle"
+                  placeholder="newTitle" name="newTitle">
+                <label for="newTitle" class="form-label ">New Title</label>
+              </div>
+              <div class="form-group">
+                <label for="description">New Description</label>
+                <textarea class="form-control" id="newDescription" rows="4"
+                  name="newDescription"></textarea>
+              </div>
+              <input class="form-control form-control-lg mt-2" name="newImage"
+                id="newImage" accept=".jpg, .jpeg, .png" type="file">
 
               <div class="mt-2 d-flex justify-content-center">
-            <button type="submit" name="button" class="btn btn-success">
-              Confirm editing
-            </button>
+                <button type="submit" name="button" class="btn btn-success">
+                  Confirm editing
+                </button>
               </div>
-          </form>
+            </form>
           </div>
         </div>
       </div>
