--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,13 @@
       crossorigin="anonymous"
       />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       />
 
     <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       />
 
     <script
@@ -25,7 +27,7 @@
 
     <link rel="stylesheet" href="../static/css/MangaShelf.css">
 
-        {%block head%}{%endblock%}
+    {%block head%}{%endblock%}
   </head>
   <body>
     <!-- NavBar -->
@@ -49,12 +51,15 @@
               <a class="nav-link active" href="/about">About</a>
             </li>
           </ul>
-          <div class="mt-3">
-            <form method="post" action="/logout"> 
-              <button type="button" class="btn btn-outline-success m-md-auto" data-bs-toggle="modal" data-bs-target="#modalSignIn" data-bs-whatever="">{{ entry['User'] }}</button>
+          <div class="m-2">
+            <form method="post" action="/logout">
+              <button type="button" class="btn btn-outline-success m-md-auto"
+                data-bs-toggle="modal" data-bs-target="#modalSignIn"
+                data-bs-whatever="">{{ entry['User'] }}</button>
               {% if entry['UserLogin'] %}
-            <button type="submit" class="btn btn-outline-danger m-md-auto">Log out</button>
-            {% endif %}
+              <button type="submit" class="btn btn-outline-danger m-md-auto">Log
+                out</button>
+              {% endif %}
             </form>
           </div>
         </div>
@@ -65,61 +70,74 @@
     {%block body%}{%endblock%}
 
 
-<div class="modal fade " id="modalSignIn" tabindex="-1" aria-labelledby="modalSignInLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalSignInLabel">Authorize</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form method="post" enctype="multipart/form-data" action="/authorize">
-          <div class="mb-3">
-            <label for="login" class="col-form-label">Login:</label>
-            <input type="text" class="form-control" id="login" name="login">
+    <div class="modal fade " id="modalSignIn" tabindex="-1"
+      aria-labelledby="modalSignInLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modalSignInLabel">Authorize</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"
+              aria-label="Close"></button>
           </div>
-          <div class="mb-3">
-            <label for="password" class="col-form-label">Password:</label>
-            <input type="password" class="form-control" id="password" name="password">
+          <div class="modal-body">
+            <form method="post" enctype="multipart/form-data"
+              action="/authorize">
+              <div class="mb-3">
+                <label for="login" class="col-form-label">Login:</label>
+                <input type="text" class="form-control" id="login" name="login">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="col-form-label">Password:</label>
+                <input type="password" class="form-control" id="password"
+                  name="password">
+              </div>
+              <hr>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Sign In</button>
+                <button type="button" class="btn btn-primary"
+                  data-bs-target="#modalSignUp" data-bs-toggle="modal">I want to
+                  register</button>
+              </div>
+            </form>
           </div>
-          <hr>
-          <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Sign In</button>
-            <button type="button" class="btn btn-primary" data-bs-target="#modalSignUp" data-bs-toggle="modal">I want to register</button>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="modal fade" id="modalSignUp" aria-hidden="true" aria-labelledby="modalSignUpLabel" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalSignUpLabel">Register</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form method="post" enctype="multipart/form-data" action="/registration">
-          <div class="mb-3">
-            <label for="InputName" class="col-form-label">Login:</label>
-            <input type="text" class="form-control" id="InputName" name="name">
+    <div class="modal fade" id="modalSignUp" aria-hidden="true"
+      aria-labelledby="modalSignUpLabel" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modalSignUpLabel">Register</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"
+              aria-label="Close"></button>
           </div>
-          <div class="mb-3">
-            <label for="InputPassword" class="col-form-label">Password:</label>
-            <input type="password" class="form-control" id="InputPassword" name="password">
+          <div class="modal-body">
+            <form method="post" enctype="multipart/form-data"
+              action="/registration">
+              <div class="mb-3">
+                <label for="InputName" class="col-form-label">Login:</label>
+                <input type="text" class="form-control" id="InputName"
+                  name="name">
+              </div>
+              <div class="mb-3">
+                <label for="InputPassword" class="col-form-label">Password:</label>
+                <input type="password" class="form-control" id="InputPassword"
+                  name="password">
+              </div>
+              <hr>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="button" class="btn btn-primary"
+                  data-bs-target="#modalSignIn" data-bs-toggle="modal">Already
+                  have an account</button>
+              </div>
+            </form>
           </div>
-          <hr>
-          <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-            <button type="button" class="btn btn-primary" data-bs-target="#modalSignIn" data-bs-toggle="modal">Already have an account</button>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
 
 
@@ -156,11 +174,12 @@
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0,
         0.2);">
         © 2022 Copyright:
-        <a class="text-white" href="http://127.0.0.1:5500/MangaShelf-master/templates/MangaShelf.html">MewManga.com</a>
+        <a class="text-white"
+          href="http://127.0.0.1:5500/MangaShelf-master/templates/MangaShelf.html">MewManga.com</a>
       </div>
       <!-- Copyright -->
     </footer>
 
-  <script src="../static/css/modal.js"></script>
+    <script src="../static/css/modal.js"></script>
   </body>
 </html>
