--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -74,11 +74,13 @@
   {% for element in entry['Catalogue'] %}
   <div class="col-3">
     <div class="card">
+      <a href="/mangaPage">
       <img src="{{ element['image'] }}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{ element['title'] }}</h5>
         <p class="card-text">{{ element['description'] | truncate(200)}}</p>
       </div>
+        </a>
     </div>
   </div>
   {% endfor %}
