fontsize on mangaPage

--- a/templates/MangaShelf.html
+++ b/templates/MangaShelf.html
@@ -9,8 +9,8 @@
   #offcanvasBtn{
   background-color: #e3c865;
 }
-a:active, /* активная/посещенная ссылка /
-  a:hover,  / при наведении */
+  a:active,
+  a:hover,
   a {
   text-decoration: none;
   color: #000000;
