--- a/templates/mangaPage.html
+++ b/templates/mangaPage.html
@@ -11,6 +11,9 @@
         background-color: #f1dae5;
         border-radius: 20px;
     }
+    p{
+        font-size: 20px;
+    }
 </style>
 {%endblock%}
 {%block body%}
